--- a/src/scss/actor/parts/main.scss
+++ b/src/scss/actor/parts/main.scss
@@ -6,7 +6,8 @@
 
   .sheet-tabs,
   .mystic-tabs,
-  .psychic-tabs {
+  .psychic-tabs,
+  .general-tabs {
     &.secondary-tab {
       margin-top: 0;
       height: 1.2rem;
