--- a/src/templates/actor/parts/general/parts/level.hbs
+++ b/src/templates/actor/parts/general/parts/level.hbs
@@ -1,29 +1,40 @@
-<div class='group level'>
-  <div class='group-header'>
-    <img
-      class='add-button'
-      data-on-click='add-level'
-      src='/systems/animabf/assets/icons/game-icons.net/ffffff/sbed/add.svg'
-    />
-    <h3 class='group-header-title'>{{localize 'anima.ui.levelSection.title'}}</h3>
+{{#> "systems/animabf/templates/common/ui/group.hbs"
+  class="level"
+}}
+  {{#>
+  "systems/animabf/templates/common/ui/group-header.hbs"
+  }}
+    {{>
+    "systems/animabf/templates/common/ui/add-item-button.hbs"
+      data="add-level"
+    }}
+    {{>
+    "systems/animabf/templates/common/ui/group-header-title.hbs"
+      title=(localize 'anima.ui.levelSection.title')
+    }}
     <input type='number' class='input' />
-  </div>
-  <div id='levels-context-menu-container' class='group-body'>
+  {{/"systems/animabf/templates/common/ui/group-header.hbs"}}
+  {{#> "systems/animabf/templates/common/ui/group-body.hbs"
+    class="level"
+  }}
     {{#each data.data.general.levels}}
-      <div data-item-id='{{this._id}}' class='level-row flex'>
-        <input
-          name='data.dynamic.levels.{{this._id}}.name'
-          type='text'
-          class='input'
-          value='{{this.name}}'
-        />
-        <input
-          name='data.dynamic.levels.{{this._id}}.data.level'
-          type='text'
-          class='input'
-          value='{{this.data.level}}'
-        />
+      <div data-item-id='{{this._id}}' class='level-row'>
+        {{>
+        "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+          class="name"
+          hideTitle=true
+          inputType="text"
+          inputName=(concat "data.dynamic.levels." this._id ".name")
+          inputValue=this.name
+        }}
+        {{>
+        "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+          class="level"
+          hideTitle=true
+          inputName=(concat "data.dynamic.levels." this._id ".data.level")
+          inputValue=this.data.level
+        }}
       </div>
     {{/each}}
-  </div>
-</div>
+  {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
+{{/"systems/animabf/templates/common/ui/group.hbs"}}
