--- a/src/templates/actor/parts/general/parts/notes.hbs
+++ b/src/templates/actor/parts/general/parts/notes.hbs
@@ -1,17 +1,18 @@
-<div class='group _notes mt-3'>
-  <div class='group-header'>
-    <img
-      class='add-button'
-      data-on-click='add-note'
-      src='/systems/animabf/assets/icons/game-icons.net/ffffff/sbed/add.svg'
-    />
-    <h3 class='group-header-title'>{{localize 'anima.ui.notesSection.title'}}</h3>
-  </div>
-  <div id='notes-context-menu-container' class='group-body'>
+{{#> "systems/animabf/templates/common/ui/group.hbs"
+  class="_notes"
+}}
+  {{>
+  "systems/animabf/templates/common/ui/group-header.hbs"
+    title=(localize 'anima.ui.notesSection.title')
+    addRowButtonData="add-note"
+  }}
+  {{#> "systems/animabf/templates/common/ui/group-body.hbs"
+    class="_notes"
+  }}
     {{#each data.data.general.notes}}
       <div data-item-id='{{this._id}}' class='note-row'>
         {{editor content=this.name target=(concat "data.dynamic.notes." this._id ".name") button=true owner=true editable=true}}
       </div>
     {{/each}}
-  </div>
-</div>
+  {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
+{{/"systems/animabf/templates/common/ui/group.hbs"}}
