--- a/src/templates/actor/parts/general/parts/titles.hbs
+++ b/src/templates/actor/parts/general/parts/titles.hbs
@@ -1,13 +1,14 @@
-<div class='group titles mt-3'>
-  <div class='group-header'>
-    <img
-      class='add-button'
-      data-on-click='add-title'
-      src='/systems/animabf/assets/icons/game-icons.net/ffffff/sbed/add.svg'
-    />
-    <h3 class='group-header-title'>{{localize 'anima.ui.titleSection.title'}}</h3>
-  </div>
-  <div id='titles-context-menu-container' class='group-body'>
+{{#> "systems/animabf/templates/common/ui/group.hbs"
+  class="titles"
+}}
+  {{>
+  "systems/animabf/templates/common/ui/group-header.hbs"
+    title=(localize 'anima.ui.titleSection.title')
+    addRowButtonData="add-title"
+  }}
+  {{#> "systems/animabf/templates/common/ui/group-body.hbs"
+    class="titles"
+  }}
     {{#each data.data.general.titles}}
       <div data-item-id='{{this._id}}' class='title-row'>
         <input
@@ -18,5 +19,5 @@
         />
       </div>
     {{/each}}
-  </div>
-</div>
+  {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
+{{/"systems/animabf/templates/common/ui/group.hbs"}}
