wip: websocket combat system

--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -6,3 +6,8 @@
 
 @import 'actor/actor-sheet.scss';
 @import 'items/items-sheet.scss';
+
+@import 'dialog/gm-combat-dialog.scss';
+@import 'dialog/combat-request-dialog.scss';
+@import 'dialog/user-combat-attack-dialog.scss';
+@import 'dialog/user-combat-defense-dialog.scss';
