--- a/src/scss/dialog/user-combat-attack-dialog.scss
+++ b/src/scss/dialog/user-combat-attack-dialog.scss
@@ -6,13 +6,56 @@
   justify-content: center;
   align-items: center;
 
-  &.allowed {
-    width: 500px;
-    height: 220px;
+  width: auto !important;
+  height: auto !important;
+
+  .window-content {
+    width: 550px;
+  }
+
+  .common-group {
+    height: 100%;
+  }
+
+  .sheet-tabs {
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: inherit;
+
+    margin-bottom: 0.75rem;
+
+    border-top: 1px solid $red;
+    border-bottom: 1px solid $red;
+
+    .item {
+      background: transparent;
+      border-radius: $border-radius;
+      color: $black;
+      font-weight: 600;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .active {
+      text-shadow: none;
+      background-color: $red;
+      color: $white;
+      font-weight: 600;
+    }
   }
 
   .group-body {
-    .attack-sent {
+    overflow-y: scroll;
+
+    height: 100%;
+
+    .attack-sent,
+    .mystic-attack-sent,
+    .psychic-attack-sent {
       display: flex;
       flex-direction: column;
       justify-content: center;
